fix transparent sidebar on mobile

--- a/src/components/navigation/Sidebar.module.scss
+++ b/src/components/navigation/Sidebar.module.scss
@@ -13,8 +13,7 @@
     gap: 48px;
 
     // box-shadow: 4px 0px 16px hsla(210, 11%, 25%, 0.5);
-    background-color: inherit;
-
+    background-color: $dark;
 
     /* Mobile */
     grid-column: main-start / main-end;
@@ -45,8 +44,7 @@
         height: auto;
 
         flex-direction: row;
-        
-        background-color: $dark;
+    
 
         display: grid;
         grid-template-columns: 
